Fix map resposivness on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,13 +37,14 @@ header {
 }
 
 
-#message_trip_added {
+.message_trip_added {
     position: fixed;
+    padding: 0;
     bottom: 80px;  
     right: 20px;  
     z-index: 2050;
     height: auto;  
-    max-width: 300px;
+    max-width: 280px;
 }
 
 .link {
@@ -65,6 +66,7 @@ header {
 
 main {
     flex: 1;
+    
 }
 
 
@@ -111,7 +113,6 @@ main {
     padding: 1rem;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     margin: 0.5rem 0;
-    /*z-index: -2 !important;*/ 
 }
 
 
@@ -129,10 +130,12 @@ main {
 
 
 .c_map{
-    width: auto;
-    height: 100%;
-    min-height: 400px;
-    min-width: 280px;
+    /* REMEMBER */
+    width: 100%; /* full width of its container */
+    height: 100%; /* full height of its container */
+    max-width: 100%;  /* Prevents extending beyond parent container */
+    min-height: 450px; /* Keeps a minimum height for better usability */
+    box-sizing: border-box; /* Includes padding and border in the map dimensions */
 }
 
 
@@ -211,14 +214,8 @@ footer a {
 }
 
 
-.error-message {
-    color: #dc3545;
-    display: none;  /* Initially hidden, will be shown on error */
-}
-
-
 .modal-backdrop {
-    z-index: 9000! important; /* Ensure the backdrop is behind the modal */
+    z-index: 9000! important;
 }
 
 
@@ -251,7 +248,9 @@ footer a {
 }
 
 
-
+#contact-us-card{
+    min-width: 280px;
+}
 
 @media screen and (min-width: 768px) {
     .c-img {
